Updated smtp server settings Fixed login screen jumps issue Added Bootstrap toggle on registration page

--- a/EmployeePerfomanceEvaluationSystem/client_app/performance-evaluation-client/src/app/accounts/user-login/user-login-component.css
+++ b/EmployeePerfomanceEvaluationSystem/client_app/performance-evaluation-client/src/app/accounts/user-login/user-login-component.css
@@ -1,5 +1,9 @@
-﻿.user_card {
-    height: 400px;
+﻿.login_controls_container{
+    margin-top:50px;
+}
+
+.user_card {
+    height: 420px;
     width: 500px;
     margin-top: 50px;
     margin-bottom: auto;
@@ -7,7 +11,6 @@
     position: relative;
     display: flex;
     justify-content: center;
-    flex-direction: column;
     padding: 10px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
